@startuml

title __PIZZA's Class Diagram__\n

  namespace com.atguigu.factory.absfactory.pizzastore.pizza {
    class com.atguigu.factory.absfactory.pizzastore.pizza.BJCheesePizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.absfactory.pizzastore.pizza {
    class com.atguigu.factory.absfactory.pizzastore.pizza.BJPepperPizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.absfactory.pizzastore.pizza {
    class com.atguigu.factory.absfactory.pizzastore.pizza.LDCheesePizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.absfactory.pizzastore.pizza {
    class com.atguigu.factory.absfactory.pizzastore.pizza.LDPepperPizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.absfactory.pizzastore.pizza {
    abstract class com.atguigu.factory.absfactory.pizzastore.pizza.Pizza {
        # name : String
        + bake()
        + box()
        + cut()
        {abstract} + prepare()
        + setName()
    }
  }
  

  com.atguigu.factory.absfactory.pizzastore.pizza.BJCheesePizza -up-|> com.atguigu.factory.absfactory.pizzastore.pizza.Pizza
  com.atguigu.factory.absfactory.pizzastore.pizza.BJPepperPizza -up-|> com.atguigu.factory.absfactory.pizzastore.pizza.Pizza
  com.atguigu.factory.absfactory.pizzastore.pizza.LDCheesePizza -up-|> com.atguigu.factory.absfactory.pizzastore.pizza.Pizza
  com.atguigu.factory.absfactory.pizzastore.pizza.LDPepperPizza -up-|> com.atguigu.factory.absfactory.pizzastore.pizza.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
